# microcosm

./: CMakeLists.txt  LICENSE  prj.conf  west.yml
src/: hello.S  hello.c  kernel.c  main.c
userland/: CMakeLists.txt  hello.c  kernel-stub.c
userland/cmake/: toolchain.cmake
